# KronprinsFrederiksBro

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/kronprins_frederiks_bro/: __init__.py  api.py  bridge_schedule.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/kronprins_frederiks_bro/translations/: en.json
custom_components/my_integration/: __init__.py  api.py  bridge_schedule.py  const.py  manifest.json  sensor.py  strings.json
custom_components/my_integration/translations/: en.json
tests/: conftest.py  test_api.py  test_bridge_schedule.py  test_sensor.py
